--- a/pages/locals.html
+++ b/pages/locals.html
@@ -20,7 +20,7 @@
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+      <i class="fas fa-bars"></i>
     </button>
 
     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
@@ -56,7 +56,7 @@
         </div>
       </nav>
 
-      <div class="tab-content col-sm-12" id="nav-tabContent">
+      <div class="tab-content col-sm-12 pb-4" id="nav-tabContent">
         <div class="tab-pane fade show active" id="map-content" role="tabpanel" aria-labelledby="nav-map-tab">
           <div id="map"></div>
         </div>
@@ -82,6 +82,12 @@
       </div>
     </div>
   </main>
+
+  <footer class="footer mt-auto py-3">
+    <div class="container">
+      <span class="text-muted d-flex">Desenvolvido com<i class="fas fa-heart"></i>por William Medeiros</span>
+    </div>
+  </footer>
 
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
