--- a/pages/movies.html
+++ b/pages/movies.html
@@ -19,7 +19,7 @@
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+      <i class="fas fa-bars"></i>
     </button>
 
     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
@@ -132,7 +132,11 @@
 
   </main>
 
-
+  <footer class="footer mt-auto py-3">
+    <div class="container">
+      <span class="text-muted d-flex">Desenvolvido com<i class="fas fa-heart"></i>por William Medeiros</span>
+    </div>
+  </footer>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
