--- a/pages/utils-links.html
+++ b/pages/utils-links.html
@@ -20,7 +20,7 @@
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+      <i class="fas fa-bars"></i>
     </button>
 
     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
@@ -95,7 +95,7 @@
       
       <main>
         <article>
-          <div class="card mb-4" style="max-width: ;">
+          <div class="card mb-4">
             <div class="row no-gutters">
               <div class="col-md-4">
                 <iframe class="card-img" width="100%" height="100%" src="https://www.youtube.com/embed/v8xRwaTtU7o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -109,21 +109,21 @@
             </div>
           </div>
 
-          <div class="card mb-4" style="max-width: ;">
+          <div class="card mb-4">
             <div class="row no-gutters">
-              <div class="col-md-4">
-                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/nlh80m8k28g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-              </div>
-              <div class="col-md-8">
+              <div class="col-md-8 order-sm-2 order-md-1">
                 <div class="card-body">
                   <h5 class="card-title">Fabio Chaves</h5>
                   <p class="card-text">O canal oficial do portal Vista-se no YouTube traz entrevistas, dicas, respostas, opinião sobre assuntos do momento e receitas veganas.</p>
                 </div>
               </div>
+              <div class="col-md-4 order-sm-1 order-md-2">
+                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/nlh80m8k28g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div>
             </div>
           </div>
   
-          <div class="card mb-4" style="max-width: ;">
+          <div class="card mb-4">
             <div class="row no-gutters">
               <div class="col-md-4">
                 <iframe class="card-img" width="100%" height="100%" src="https://www.youtube.com/embed/dpkFE06m22o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -137,21 +137,21 @@
             </div>
           </div>
         
-          <div class="card mb-4" style="max-width: ;">
+          <div class="card mb-4">
             <div class="row no-gutters">
-              <div class="col-md-4">
-                <iframe class="card-img"  width="100%" height="100%" src="https://www.youtube.com/embed/khonaq5JTc4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-              </div>
-              <div class="col-md-8">
+              <div class="col-md-8 order-sm-2 order-md-1">
                 <div class="card-body">
                   <h5 class="card-title">VegetariRANGO</h5>
                   <p class="card-text">Programa de Culinária Vegetariana sem Frescura, possui vídeos de vlogs, entrevistas, respostas de dúvidas frequentes e receitas que facilitam a vida de veganos e vegetarianos</p>
                 </div>
               </div>
+              <div class="col-md-4 order-sm-1 order-md-2">
+                <iframe class="card-img"  width="100%" height="100%" src="https://www.youtube.com/embed/khonaq5JTc4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div>
             </div>
           </div>
 
-          <div class="card mb-4" style="max-width: ;">
+          <div class="card mb-4">
             <div class="row no-gutters">
               <div class="col-md-4">
                 <iframe class="card-img" width="100%" height="100%"  src="https://www.youtube.com/embed/JGTSuPBYfFY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -165,23 +165,29 @@
             </div>
           </div>
 
-          <div class="card mb-4" style="max-width: ;">
+          <div class="card mb-4">
             <div class="row no-gutters">
-              <div class="col-md-4">
-                  <iframe  class="card-img" width="100%" height="100%" src="https://www.youtube.com/embed/FTxoSxCC7z0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-              </div>
-              <div class="col-md-8">
+              <div class="col-md-8 order-sm-2 order-md-1">
                 <div class="card-body">
                   <h5 class="card-title">TÁ NA MESA VEGG</h5>
                   <p class="card-text">É um canal feito para compartilhar experiências na cozinha, facilitar e explorar o universo vegano! Para nós cozinhar é muito mais do que fazer comida, cozinhar é alinhar corpo e alma!</p>
                 </div>
+              </div>
+              <div class="col-md-4 order-sm-1 order-md-2">
+                  <iframe  class="card-img" width="100%" height="100%" src="https://www.youtube.com/embed/FTxoSxCC7z0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
             </div>
           </div>
         </article>
       </main>
     </article>
-	</main>
+  </main>
+  
+  <footer class="footer mt-auto py-3">
+    <div class="container">
+      <span class="text-muted d-flex">Desenvolvido com<i class="fas fa-heart"></i>por William Medeiros</span>
+    </div>
+  </footer>
 
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
