adicionado referencias; corrido estrutura do links uteis; adicinado mais texto no index

--- a/index.html
+++ b/index.html
@@ -96,9 +96,27 @@
         </header>
         <main>
           <p>Já parou pra pensar nos motivos que levam cada vez mais pessoas no mundo se tornarem veganas ou vegetarianas?</p>
-          <p>Diversos são os motivos, os principais estão relacionados a <b>Ética</b>, <b>Meio Ambiente</b> e a <b>Saúde</b>.</p>
+          <p>Diversos são os motivos, os principais estão relacionados a <b>Saúde</b>, o <b>Meio Ambiente</b> e a <b>Ética</b>.</p>
           <!-- <img width="100%" src="img/ReasonsBeVeg3.gif" class=""></img> -->
-          <img width="100%" src="img/ReasonsBeVeg3_Prancheta 1_Prancheta 1.png" class=""></img>
+          <img width="100%" src="img/ReasonsBeVeg3_Prancheta 1_Prancheta 1.png" id="ReasonsBeVeg"></img>
+          <div>
+            <p><b>Saúde</b></p>
+            <p>Dietas Vegetarianas possuiem um menor consumo de gorduras saturadas, colesterol, proteínas animais e sódio. Diversos estudos apontam para a eficácia da dieta vegetariana na prevenção da incidência de doenças crônicas degenerativas (doenças coronárias, derrame, hipertensão, obesidade, diabetes, diverticulose, cânceres), além de apresentarem um aumento da longevidade¹. </p>
+          </div>
+          <div>
+            <p><b>Ética</b></p>
+            <p>No mundo, são criados e abatidos mais de 70 bilhões de animais terrestre por ano para o consumo humano², número dez vezes maior que a população global. Estes animais incluem vacas, porcos, ovelhas, cabras, perus, patos, gansos, búfalos, coelhos, cavalos e, sobretudo, frangos³. Somente no Brasil, um dos maiores produtores de carnes do mundo (perdendo apenas para China e Estados Unidos)³, são quase seis bilhões de animais terrestres abatidos por ano: 33 milhões de bovinos, 37 milhões de suínos e 5,5 bilhões de frangos (IBGE, 2014).</p>
+            <p> Sobre criação desses animais, Naconecy³ explica como funciona sistema industrial de confinamento intensivo. “A ideia é criar o maior número de animais possível no menor espaço possível. Isso exige a máxima mecanização das operações e o total controle do que eles comem e de como vivem”. Nesse sentido, o autor critica esse sistema equiparando a forma como os animais são tratados com fábricas, onde os animais são como peças que passam por uma linha de montagem.
+            </p>
+            <p>Nesse contexto, a ética é o principal pilar que sustenta o vegetarianismo<sup>4</sup> há dessa forma a compreensão de que</p>
+            <p id="citation"><i>Os animais que consumimos, como vacas, porcos, galinhas e peixes, são seres sencientes (capazes de sofrer e experimentar contentamento) e que, portanto, merecem respeito e consideração moral. Além disso, esses animais são capazes de tomar conta de si mesmos, de escolherem o que querem para si. Nessa perspectiva, tais animais possuem valor intrínseco, ou seja, devem ser considerados como fins em si mesmos – e não como mero objetos para satisfazer os interesses humanos.<sup>4</sup></i></p>
+          </div>
+          <div>
+            <p><b>Meio Ambiente</b></p>
+            <p>Segundo a ONU a pecuária, incluindo a produção de todos os derivados animais, é responsável pelo consumo de 70% de água fresca do planeta, 38% de uso da terra e 19% da emissão de gases estufa.<sup>5</sup></p>
+            <p>O relatório “O Estado das Florestas do Mundo 2016” (SOFO na sigla em inglês)<sup>6</sup>, aponta que na América Latina o agronegócio foi responsável por quase 70% do desmatamento entre 2000 e 2010 e a nível global 75% de todas as terras aráveis do planeta são utilizadas pela pecuária para pastagem e produção de ração<sup>7</sup>.</p>
+            <p id="citation"><i>O impacto da criação de animais não se limita ao uso ineficiente de terras, e consequentemente desmatamento, extensa perda de habitats e espécies. A pecuária contribuiu de forma decisiva para os processos de erosão do solo, para contaminação da água, para a alteração dos ciclos de nutrientes do planeta, e para a escassez hídrica em muitas regiões - de todos os setores econômicos, o setor pecuário é que faz o uso mais ineficiente dos recursos hídricos, destinados principalmente à irrigação e ao crescimento de cultivos para produzir ração.<sup>8</sup></i></p>
+          </div>
         </main>
       </article>
 
@@ -107,8 +125,38 @@
           <h1 id="importance-title" class="title-topic">Importância</h1>
         </header>
         <main>
-          <p>O Vegetarianismo e o Veganismo vem contribuindo profusamente para as causas ambientais e relacionadas a ética animal</p>
+          <p>Um relatório da SVB aponta os diversos impactos ambientais do consumo de animais no mundo, como o uso exaustivo e ineficiente da água, a emissão de números gases danosos a atmosfera (responsáveis pelo efeito estufa) como CO2, Metano, óxido nitroso, o desmatamento de florestas, a eliminação de habitats naturais, a desertificação de solos, a contaminação de águas, entre outros<sup>2</sup>. Percebe-se desse modo os efeitos desastrosos do consumo da carne, ainda segundo o relatório 30% das áreas terrestres do globo são usados como pastagem – área equivalente ao continente africano<sup>2</sup>.</p>
+          <p>Dessa forma, o Vegetarianismo e o Veganismo vem contribuindo intensamente para as causas ambientais e relacionadas a ética animal</p>
         </main>
+        <footer>
+          <p class="refence" id="referencias"><small class="text-muted"><b>REFERÊNCIAS</b></small></p>
+          <p class="refence"><small class="text-muted">
+            1 GREIF, Sérgio. Caracterização do consumo alimentar e hábitos associados à saúde em vegetarianos do estado de São Paulo. 2005. 145 f. Dissertação (Mestrado em Engenharia de Alimentos) - Universidade Estadual de Campinas, Campinas, 2005. Disponível em: http://repositorio.unicamp.br/bitstream/REPOSIP/254965/1/Greif_Sergio_M.pdf .Acesso em: 20 maio 2019.
+          </small></p>
+          <p class="refence"><small class="text-muted">
+            2 SCHUCK, Cynthia; RIBEIRO, Raquel. Comendo o Planeta: Impactos Ambientais da Criação e Consumo de Animais. 3ª ed. [S. l.]: Vesper AMB, 2015. 66 p. Disponível em: https://www.svb.org.br/livros/comendo_o_planeta.pdf .Acesso em: 20 maio 2019.
+          </small></p>
+          <p class="refence"><small class="text-muted">
+            3 NACONECY, Carlos. Ética & Vegetarianismo. [S. l.: s. n.], 2015. Disponível em: https://www.svb.org.br/livros/etica_e_vegetarianismo.pdf .Acesso em: 20 maio 2019.
+          </small></p>
+          <p class="refence"><small class="text-muted">
+            4 SOCIEDADE VEGETARIANA BRASILEIRA. Vegetarianismo. Sociedade Vegetariana Brasileira. c2017. Disponível em: https://www.svb.org.br/vegetarianismo1/o-que-e .Acesso em: 20 maio 2019.
+          </small></p>
+          <p class="refence"><small class="text-muted">
+            5 PASOLINI, Lobo; CHINELATTO, Giovanna. ONU recomenda dieta vegana para combater mudança climática. Agência de Notícias de Direitos Animais. c2008 - 2019. Disponível em: <https://www.anda.jor.br/2010/06/onu-recomenda-dietavegana-para-combater-mudanca-climatica/>. Acesso em: 20 maio 2019.
+          </small></p>
+          <p class="refence"><small class="text-muted">
+            6 FAO. FAO: Incentivos gera redução de desmatamento no Brasil. FAO. c2019. Disponível em: http://www.fao.org/brasil/noticias/detail-events/pt/c/426091/ .Acesso em: 20 maio 2019
+          </small></p>
+          <p class="refence"><small class="text-muted">
+            7 SCHUCK-PAIM, Cynthia. Impactos da pecuária no Brasil e no mundo. Sociedade
+            Vegetariana Brasileira, 2017. Disponível em: https://svb.org.br/livros/impactosdapecuaria.pdf . Acesso em: 20 maio 2019.
+          </small></p>
+          <p class="refence"><small class="text-muted">
+            8 SOCIEDADE VEGETARIANA BRASILEIRA. Impactos Segunda Sem Carne. Sociedade Vegetariana Brasileira. [2017]. Disponível em:
+            https://www.svb.org.br/images/livros/SVB_relatorio_ODS_SSC.pdf. Acesso em: 20 maio 2019
+          </small></p>
+        </footer>
       </article>
     </div>
   </main>
