--- a/pages/utils-links.html
+++ b/pages/utils-links.html
@@ -111,13 +111,13 @@
 
           <div class="card mb-4">
             <div class="row no-gutters">
-              <div class="col-md-8 order-sm-2 order-md-1">
+              <div class="col-md-8 order-2 order-md-1">
                 <div class="card-body">
                   <h5 class="card-title">Fabio Chaves</h5>
                   <p class="card-text">O canal oficial do portal Vista-se no YouTube traz entrevistas, dicas, respostas, opinião sobre assuntos do momento e receitas veganas.</p>
                 </div>
               </div>
-              <div class="col-md-4 order-sm-1 order-md-2">
+              <div class="col-md-4 order-1 order-md-2">
                 <iframe width="100%" height="100%" src="https://www.youtube.com/embed/nlh80m8k28g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
             </div>
@@ -139,13 +139,13 @@
         
           <div class="card mb-4">
             <div class="row no-gutters">
-              <div class="col-md-8 order-sm-2 order-md-1">
+              <div class="col-md-8 order-2 order-md-1">
                 <div class="card-body">
                   <h5 class="card-title">VegetariRANGO</h5>
                   <p class="card-text">Programa de Culinária Vegetariana sem Frescura, possui vídeos de vlogs, entrevistas, respostas de dúvidas frequentes e receitas que facilitam a vida de veganos e vegetarianos</p>
                 </div>
               </div>
-              <div class="col-md-4 order-sm-1 order-md-2">
+              <div class="col-md-4 order-1 order-md-2">
                 <iframe class="card-img"  width="100%" height="100%" src="https://www.youtube.com/embed/khonaq5JTc4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
             </div>
@@ -167,13 +167,13 @@
 
           <div class="card mb-4">
             <div class="row no-gutters">
-              <div class="col-md-8 order-sm-2 order-md-1">
+              <div class="col-md-8 order-2 order-md-1">
                 <div class="card-body">
                   <h5 class="card-title">TÁ NA MESA VEGG</h5>
                   <p class="card-text">É um canal feito para compartilhar experiências na cozinha, facilitar e explorar o universo vegano! Para nós cozinhar é muito mais do que fazer comida, cozinhar é alinhar corpo e alma!</p>
                 </div>
               </div>
-              <div class="col-md-4 order-sm-1 order-md-2">
+              <div class="col-md-4 order-1 order-md-2">
                   <iframe  class="card-img" width="100%" height="100%" src="https://www.youtube.com/embed/FTxoSxCC7z0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
             </div>
